kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporting
  template:
    metadata:
      labels:
        app: reporting
    spec:
      containers:
      - name: reporting
        image: titaniumcoder/reporting:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "200m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            port: 8080
            path: /health
          initialDelaySeconds: 5
          periodSeconds: 15
