kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reporting
spec:
  selector:
    app: reporting
  ports:
  - protocol: TCP
    port: 8080
  type: NodePort
