kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: reporting
spec:
  rules:
  - host: reporting.titaniumcoder.com
    http:
      paths:
      - backend:
          serviceName: reporting
          servicePort: 8080
  tls:
  - hosts:
    - reporting.titaniumcoder.com
    secretName: titaniumcoder-tls
